--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -24,7 +24,8 @@ jobs:
     - name: curl
       uses: wei/curl@v1
       with:
-        args: --upload-file demo_scattering_boundary_conditions.py https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions/demo_scattering_boundary_conditions.py
+        args: https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
+        
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
