--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -22,9 +22,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: curl
-      uses: wei/curl@v1
       with:
-        args: https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
+        args: curl https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
         
   build:
     # The type of runner that the job will run on
