--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -27,7 +27,10 @@ jobs:
         curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
         curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
         curl $URL_SBC/mesh_wire.py -o mesh_wire.py
-        ls
+        git config --global user.name 'Michele Castriotta'
+        git config --global user.email 'mich.castriotta@gmail.com'
+        git commit -am "Add demos"
+        git push
         
   build:
     # The type of runner that the job will run on
