--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -17,22 +17,6 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  curl:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: curl
-      run: |
-        URL_SBC=https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions
-        curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
-        curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
-        curl $URL_SBC/mesh_wire.py -o mesh_wire.py
-        git config --global user.name 'Michele Castriotta'
-        git config --global user.email 'mich.castriotta@gmail.com'
-        git add -A
-        git commit -m "Update demos"
-        git push origin main
-        
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -51,13 +35,33 @@ jobs:
       - uses: actions/checkout@v2 
 
       - name: Install dependencies
-        run: pip3 install notebook nbconvert==6.5.3 jupyter-book --upgrade
+        run: pip3 install jupytext notebook nbconvert==6.5.3 jupyter-book --upgrade
 
+      - name: Update demos
+        run: |
+          URL_SBC=https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions
+          curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
+          curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
+          curl $URL_SBC/mesh_wire.py -o mesh_wire.py
+      
+      - name: Convert demos
+        run: |
+          jupytext --to ipynb demo_scattering_boundary_conditions.py
+          jupytext --to ipynb mesh_wire.py
+          jupytext --to ipynb analytical_efficiencies_wire.py
+ 
+      - name: Git push
+          git config --global user.name 'Michele Castriotta'
+          git config --global user.email 'mich.castriotta@gmail.com'
+          git add -A
+          git commit -m "Update demos"
+          git push origin main
+      
       # Runs a single command using the runners shell
       - name: Build the book
         run: |
           PYVISTA_JUPYTER_BACKEND=static PYVISTA_OFF_SCREEN=false jupyter-book build --all .
-
+      
       # Push book to HTML to github pages
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.5.9
