Come back to previous layout

--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -17,6 +17,33 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+  curl:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install jupytext
+      run: pip3 install jupytext
+
+    - name: Update SBC demo
+      run: |
+        URL_SBC=https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions
+        curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
+        curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
+        curl $URL_SBC/mesh_wire.py -o mesh_wire.py
+
+    - name: Convert to ipynb
+      run: |
+        jupytext --to ipynb demo_scattering_boundary_conditions.py
+
+    - name: Push updates
+      run: |
+        git config --global user.name 'Michele Castriotta'
+        git config --global user.email 'mich.castriotta@gmail.com'
+        git add -A
+        git commit -m "Update demos"
+        git push origin main
+        
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -34,33 +61,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2 
 
-      - name: Install curl
-        run: apt install curl
-        
       - name: Install dependencies
-        run: pip3 install jupytext notebook nbconvert==6.5.3 jupyter-book --upgrade
+        run: pip3 install notebook nbconvert==6.5.3 jupyter-book --upgrade
 
-      - name: Update demos
-        run: |
-          URL_SBC=https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions
-          curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
-          curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
-          curl $URL_SBC/mesh_wire.py -o mesh_wire.py
-      
-      - name: Convert demos
-        run: |
-          jupytext --to ipynb demo_scattering_boundary_conditions.py
-          jupytext --to ipynb mesh_wire.py
-          jupytext --to ipynb analytical_efficiencies_wire.py
- 
-      - name: Git push
-        run: |
-          git config --global user.name 'Michele Castriotta'
-          git config --global user.email 'mich.castriotta@gmail.com'
-          git add -A
-          git commit -m "Update demos"
-          git push origin main
-      
       # Runs a single command using the runners shell
       - name: Build the book
         run: |
