--- a/_toc.yml
+++ b/_toc.yml
@@ -3,10 +3,10 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: example
-- file: heat_eq
-- file: helmholtz
-- file: comparing_elements
-- file: access
+parts:
+  - caption: Scattering boundary conditions
+    chapters:
+    - file: demo_scattering_boundary_conditions
+    - file: analytical_efficiencies_wire
+    - file: mesh_wire
 
