--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -28,13 +28,13 @@ jobs:
     - name: Update SBC demo
       run: |
         URL_SBC=https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions
-        curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
+        #curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
         curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
         curl $URL_SBC/mesh_wire.py -o mesh_wire.py
 
     - name: Convert to ipynb
       run: |
-        jupytext --to ipynb demo_scattering_boundary_conditions.py
+        #jupytext --to ipynb demo_scattering_boundary_conditions.py
         jupytext --to ipynb analytical_efficiencies_wire.py
         jupytext --to ipynb mesh_wire.py
 
