--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ html:
   use_issues_button: true
   use_repository_button: true
   use_edit_page_button: true
+  
+launch_buttons:
+  binderhub_url: "https://mybinder.org"  # The URL for your BinderHub (e.g., https://mybinder.org)
 
   extra_footer: |
     <div>
