--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Install cURL
         run: |
-          apt-get update
-          apt-get install curl
+          apt-get -y update
+          apt-get -y install curl
 
       - name: Update SBC demo
         run: |
