--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -44,13 +44,15 @@ jobs:
 
       - name: Update SBC demo
         run: |
+          mkdir chapter1/
           URL_SBC=https://raw.githubusercontent.com/mikics/dolfinx/gsoc-demo-01/python/demo/demo_scattering_boundary_conditions
-          curl $URL_SBC/demo_scattering_boundary_conditions.py -o demo_scattering_boundary_conditions.py
-          curl $URL_SBC/analytical_efficiencies_wire.py -o analytical_efficiencies_wire.py
-          curl $URL_SBC/mesh_wire.py -o mesh_wire.py
+          curl $URL_SBC/demo_scattering_boundary_conditions.py -o chapter1/demo_scattering_boundary_conditions.py
+          curl $URL_SBC/analytical_efficiencies_wire.py -o chapter1/analytical_efficiencies_wire.py
+          curl $URL_SBC/mesh_wire.py -o chapter1/mesh_wire.py
 
       - name: Convert to ipynb
         run: |
+          cd chapter1
           jupytext --set-kernel python3-complex --to ipynb demo_scattering_boundary_conditions.py
           jupytext --to ipynb analytical_efficiencies_wire.py
           jupytext --to ipynb mesh_wire.py
