--- a/_toc.yml
+++ b/_toc.yml
@@ -6,7 +6,7 @@ root: intro
 parts:
   - caption: Scattering boundary conditions
     chapters:
-    - file: demo_scattering_boundary_conditions
-    - file: analytical_efficiencies_wire
-    - file: mesh_wire
+    - file: chapter1/demo_scattering_boundary_conditions
+    - file: chapter1/analytical_efficiencies_wire
+    - file: chapter1/mesh_wire
 
