--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -56,7 +56,15 @@ jobs:
           jupytext --set-kernel python3-complex --to ipynb demo_scattering_boundary_conditions.py
           jupytext --to ipynb analytical_efficiencies_wire.py
           jupytext --to ipynb mesh_wire.py
-
+      
+      - name: Push to GH
+        run: |  
+          git config --global user.name "Michele Castriotta"
+          git config --global user.email mich.castriotta@gmail.com
+          git add -A
+          git commit -m "Update demos
+          git push origin main
+      
       # Runs a single command using the runners shell
       - name: Build the book
         run: |
