--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -35,9 +35,10 @@ jobs:
       - uses: actions/checkout@v2 
 
       - name: Install dependencies
-        run: pip3 install notebook nbconvert==6.5.3 jupyter-book --upgrade
-	run: pip3 uninstall ipywidgets
-	run: pip3 install ipywidgets==7.7.2
+        run: |
+          pip3 install notebook nbconvert==6.5.3 jupyter-book --upgrade
+	  pip3 uninstall ipywidgets
+	  pip3 install ipywidgets==7.7.2
 	
       # Runs a single command using the runners shell
       - name: Build the book
