--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -40,7 +40,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build the book
         run: |
-          PYVISTA_JUPYTER_BACKEND=static PYVISTA_OFF_SCREEN=false jupyter-book build -W .
+          PYVISTA_JUPYTER_BACKEND=static PYVISTA_OFF_SCREEN=false jupyter-book build --all .
       
       # Push book to HTML to github pages
       - name: GitHub Pages action
@@ -48,6 +48,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_build/html
-
-
-
