--- a/_toc.yml
+++ b/_toc.yml
@@ -9,5 +9,19 @@ parts:
     - file: chapter1/demo_scattering_boundary_conditions
     - file: chapter1/analytical_efficiencies_wire
     - file: chapter1/mesh_wire
-    - file: chapter1/fundamentals_code
-    - file: chapter1/em
+
+  - caption: Perfectly matched layer (PML)
+    chapters:
+    - file: chapter2/demo_pml
+    - file: chapter2/analytical_efficiencies_wire
+    - file: chapter2/mesh_wire_pml
+  
+  - caption: Half-loaded waveguide
+    chapters:
+    - file: chapter3/demo_half_loaded_waveguide
+    - file: chapter3/analytical_modes
+
+  - caption: Axisymmetric Maxwell's equations
+    chapters:
+    - file: chapter4/demo_axis
+    - file: chapter4/mesh_sphere_axis
